--- a/erh.html
+++ b/erh.html
@@ -8,7 +8,7 @@
 <body style="background-image: linear-gradient(#111119, #e16b24);">
     
     <header>
-        <img src="C:\Users\ADMIN\Downloads\bài_nhóm_36\clb\banner.jpg" alt="Banner CLB Guitar" class="banner-img">
+        <img src="clb\banner.jpg" alt="Banner CLB Guitar" class="banner-img">
         <div class="slogan">Khẩu hiệu: "Nơi tiếng đàn kết nối những trái tim"</div>
     </header>
 
@@ -43,4 +43,5 @@
     </footer>
 
 </body>
+
 </html>
