--- a/erh.html
+++ b/erh.html
@@ -23,12 +23,12 @@
 
         <main>
             <div class="content-box">
-                <img src="https://scontent-hkg1-2.xx.fbcdn.net/v/t39.30808-6/603874911_1448625087267228_5117244783676539983_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_ohc=GJxRIvmRLKYQ7kNvwFzmNjp&_nc_oc=AdkaHZmP1LUqOmO7vL4OcfL4WdC2Z8oHQvT44wFNprwgcdDskNhvDxJ7JmzTa1NGxLgFJ0rbi3l__PdMfvqDHIXm&_nc_zt=23&_nc_ht=scontent-hkg1-2.xx&_nc_gid=24Nkt6zvuPCyMPvBcsBy5A&oh=00_Afs8ndvjZdEu05Nx4VE7jqdJbcIFfdSNkAPyOlqDEAGuSA&oe=6987BA7D" alt="Hoạt động CLB">
+                <img src="clb/hoạt động.jpg" alt="Hoạt động CLB">
                 <p>Những khoảnh khắc ấn tượng của các thành viên trong các đêm nhạc.</p>
             </div>
 
             <div class="content-box">
-                <img src="C:\Users\ADMIN\Downloads\bài_nhóm_36\clb\đẹp trai.jpg" alt="Thành viên CLB">
+                <img src="clb\đẹp trai.jpg" alt="Thành viên CLB">
                 <p>Các buổi tập luyện và biểu diễn thường niên của CLB Guitar NBK.</p>
             </div>
         </main>
@@ -45,3 +45,4 @@
 </body>
 
 </html>
+
